.svn/pristine/5b/5b6ff28744f1c912d5c5dfcdcb43ad71accd950f.svn-base
Naloga2.c: In function 'pids':
Naloga2.c:227:49: error: 'NULLsv' undeclared (first use in this function)
       while((sub_dir_ptr = readdir(sub_dir)) != NULLsv)
                                                 ^
Naloga2.c:227:49: note: each undeclared identifier is reported only once for each function it appears in
